feat(E05S12): auto-seed N team slots at tournament create (atomic, i18n-aware)
- DefaultTournamentService.createTournament() seeds N=teamCount Team rows
  within the same @Transactional boundary (AC-IMPL-AUTO-SEED-AT-CREATE,
  AC-ERR-ATOMIC-ROLLBACK)
- Team labels resolved via MessageSource key team.defaultLabel (DE default
  from messages.properties; AC-I18N-LABEL-FROM-MESSAGE-BUNDLE)
- Locale chain: tenant.language ?? "de" via JDBC query (AC-I18N-LOCALE-CHAIN)
- Description format: String.format("%s %02d", label, n) (AC-IMPL-DESC-FORMAT)
- Default flags: participate=true, refereeAssignment=false, withoutAssessment=false
- TeamRepository.deleteByTournamentId() added so deleteTournament() can remove
  seeded rows before deleting the tournament row (ON DELETE RESTRICT FK)
- Pre-existing ITs (TeamControllerIT, TeamPhotoControllerIT, DraftControllerIT,
  TournamentCutoverSmokeIT) updated to reflect N-seeded-teams-at-create reality
- DraftControllerIT.sampleSection() game mode corrected to "roundRobin"
  (was "roundrobin" — never exercised before because teams were empty)

mvn verify GREEN: 437 tests, 0 failures, 0 errors

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>